--- a/.gitignore
+++ b/.gitignore
@@ -145,4 +145,5 @@ gradle-app.setting
 # End of https://www.gitignore.io/api/java,gradle,intellij,intellij+all
 
 
-
+# generated test-template directory
+tpl-gen/
