--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,20 @@
     <groupId>net.h34t</groupId>
     <artifactId>temporize</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <name>temporize</name>
+
+    <url>https://github.com/h34tnet/temporize</url>
+
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>https://opensource.org/licenses/MIT</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
