--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>net.h34t</groupId>
+    <groupId>com.github.h34tnet</groupId>
     <artifactId>temporize</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>1.0</version>
+    <version>release-1.0</version>
 
     <name>temporize</name>
 
